<resources>
    <string name="app_name">PolyIncidents</string>
    <string name="tab_text_1">À traiter</string>
    <string name="tab_text_2">En cours de traitement</string>
    <string name="tab_text_3">Traité</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">image</string>
    <string name="load_image">Load Image</string>
    <string name="first_button">Nouvel incident</string>
    <string name="second_button">Chercher incident</string>
    <string name="third_button">Profil</string>
    <string name="title_main_activity">PolyIncidents</string>
    <string name="title_activity_adding">Ajouter un incident</string>
    <string name="title_view_details">Détails de l\'incident</string>
    <string name="title_profile">Mon profil</string>

    <string name="showMore">Afficher plus</string>
    <string name="title_activity_maps">Map</string>
    <string name="connexion_button_label">Se connecter</string>
    <string name="selectionner">Sélectionner</string>
</resources>
